Fixed 'broken' HTML on show objects curated page, by stripping HTML tags and truncating data object description field. Changes include refactoring of show objects curated view and user models methods for calculating total data objects curated; addition of conditional association to user model for action histories on data objects; attempt to add eager loading with nested includes in show objects curated controller - I suspect this is not working as expected.  WEB-1922

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1494,6 +1494,14 @@ a.footnote {
   .results_table td.stats {
     text-align: right; }
 
+table#show_objects_curated.results_table td {
+  vertical-align: top; }
+  table#show_objects_curated.results_table td.description {
+    position: relative; }
+    table#show_objects_curated.results_table td.description img {
+      float: left;
+      margin: 0 5px 5px 0; }
+
 #footer {
   width: 962px;
   padding: 15px 0 5px 20px;
